# AstroCode

./: .gitignore  README.md  build.bat  chat_log.py  start.bat
CLI/: .envexample  FINAL_SUMMARY.md  MODIFICATION_SUMMARY.md  env.md  esbuild.config.js  package-lock.json  package.json
CLI/integration-tests/: test-helper.ts
SandBox/: pyproject.toml
SandBox/doc/Embedded-Libraries/: Astropy.md  REBOUND.md  lenstronomy.md
SandBox/doc/Embedded-Libraries/lenstronomy详细笔记/Clusters/: readme.md
SandBox/doc/Embedded-Libraries/lenstronomy详细笔记/GettingStarted/: lensing_rgb_image.ipynb
SandBox/doc/Embedded-Libraries/lenstronomy详细笔记/LensModeling/: source_reconstruction_with_shapelets.ipynb
