[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astrocode-sandbox-environment"
version = "0.1.0"
description = "A dedicated Python environment for AstroCode's SandBox operations, containing essential astronomical research libraries."
authors = [
  { name="T-Auto", email="2079551819@qq.com" },
]
license = { text = "MIT" }
requires-python = "==3.12.10"

# 核心依赖库
dependencies = [
    "lenstronomy",
    "astropy",
    "numpy",
    "matplotlib",
    "rebound",
]

[project.urls]
Repository = "https://github.com/Blizzard-Passage-Lab/AstroCode"
